--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Menu</title>
+    <title>Super Bubi Bros</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-        body { margin: 0; background: #FFF8DC; overflow: hidden; font-family: 'Press Start 2P', cursive; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; text-align: center; }
-        h1 { color: #5D4037; font-size: 2rem; text-shadow: 4px 4px #D7CCC8; margin-bottom: 10px; line-height: 1.5; }
-        .pixel-heart { font-size: 4rem; color: #e74c3c; animation: beat 1s infinite; margin-bottom: 30px; }
-        @keyframes beat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.2); } }
-        button { background: #5D4037; color: #FFF8DC; border: 4px solid #8D6E63; padding: 15px 30px; font-family: 'Press Start 2P'; cursor: pointer; text-transform: uppercase; box-shadow: 0 6px #3E2723; }
+        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; }
+        iframe { width: 100vw; height: 100vh; border: none; display: block; }
     </style>
 </head>
 <body>
-    <h1>SUPER<br>BUBI BROS</h1>
-    <div class="pixel-heart">❤️</div>
-    <button onclick="window.parent.postMessage('NEXT_LEVEL_1', '*')">START</button>
+    <iframe id="game-frame" src="menu.html"></iframe>
+
+    <script>
+        const frame = document.getElementById('game-frame');
+
+        window.onmessage = function(e) {
+            // Se il menu invia il segnale, carica il Livello 1
+            if (e.data === 'NEXT_LEVEL_1') frame.src = "livello1.html";
+            if (e.data === 'NEXT_LEVEL_2') frame.src = "livello2.html";
+            if (e.data === 'NEXT_LEVEL_3') frame.src = "livello3.html";
+            if (e.data === 'NEXT_LEVEL_4') frame.src = "livello4.html";
+        };
+    </script>
 </body>
 </html>
