--- a/index.html
+++ b/index.html
@@ -5,23 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Super Bubi Bros</title>
     <style>
-        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; }
-        iframe { width: 100vw; height: 100vh; border: none; display: block; }
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #FFF8DC; font-family: 'Press Start 2P', cursive; }
+        
+        /* Menu fisso nel file principale per non sbagliare */
+        #main-menu {
+            position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            background: #FFF8DC; display: flex; flex-direction: column;
+            justify-content: center; align-items: center; z-index: 1000; text-align: center;
+        }
+        h1 { color: #5D4037; font-size: 2rem; text-shadow: 4px 4px #D7CCC8; margin-bottom: 10px; }
+        .pixel-heart { font-size: 4rem; color: #e74c3c; animation: beat 1s infinite; margin-bottom: 30px; }
+        @keyframes beat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.2); } }
+        #start-btn { 
+            background: #5D4037; color: #FFF8DC; border: 4px solid #8D6E63; 
+            padding: 20px 40px; font-family: 'Press Start 2P'; cursor: pointer; 
+            text-transform: uppercase; box-shadow: 0 6px #3E2723; font-size: 1.2rem;
+            pointer-events: auto;
+        }
+
+        /* Frame del gioco */
+        iframe { width: 100vw; height: 100vh; border: none; display: none; }
     </style>
 </head>
 <body>
-    <iframe id="game-frame" src="menu.html"></iframe>
 
-    <script>
-        const frame = document.getElementById('game-frame');
+<div id="main-menu">
+    <h1>SUPER<br>BUBI BROS</h1>
+    <div class="pixel-heart">❤️</div>
+    <button id="start-btn" onclick="iniziaGioco()">START</button>
+</div>
 
-        window.onmessage = function(e) {
-            // Se il menu invia il segnale, carica il Livello 1
-            if (e.data === 'NEXT_LEVEL_1') frame.src = "livello1.html";
-            if (e.data === 'NEXT_LEVEL_2') frame.src = "livello2.html";
-            if (e.data === 'NEXT_LEVEL_3') frame.src = "livello3.html";
-            if (e.data === 'NEXT_LEVEL_4') frame.src = "livello4.html";
-        };
-    </script>
+<iframe id="game-frame"></iframe>
+
+<script>
+    const menu = document.getElementById('main-menu');
+    const frame = document.getElementById('game-frame');
+
+    function iniziaGioco() {
+        // Nasconde il menu e mostra il frame del livello 1
+        menu.style.display = 'none';
+        frame.style.display = 'block';
+        frame.src = "livello1.html";
+    }
+
+    // Gestione passaggi tra livelli successivi
+    window.onmessage = function(e) {
+        if (e.data === 'NEXT_LEVEL_2') frame.src = "livello2.html";
+        if (e.data === 'NEXT_LEVEL_3') frame.src = "livello3.html";
+        if (e.data === 'NEXT_LEVEL_4') frame.src = "livello4.html";
+    };
+</script>
 </body>
 </html>
+
