--- a/livello2.html
+++ b/livello2.html
@@ -92,7 +92,7 @@
             Non c'è più tempo.<br>
             Entra e salva l'amore."
         </div>
-        <button onclick="window.parent.postMessage({type: 'NEXT_LEVEL', number: 3}, '*')">SFIDA IL RE >></button>
+      <button onclick="window.parent.postMessage('NEXT_LEVEL_3', '*')">SFIDA IL RE >></button>
     </div>
 </div>
 
@@ -345,4 +345,5 @@ function draw() {
 }
 </script>
 </body>
+
 </html>
