--- a/livello2.html
+++ b/livello2.html
@@ -85,7 +85,7 @@
             <div style="color: #fff; font-size: 0.7rem; line-height: 1.6; margin-bottom: 25px; text-align: left; background: #333; padding: 15px; border: 1px dashed #ffd700;">
                 "Il ponte levatoio si abbassa.<br>L'ingresso al Castello è aperto.<br><br>Il Re Malvagio sente la tua presenza.<br>Non c'è più tempo.<br>Entra e salva l'amore."
             </div>
-            <button style="background: #ffd700; color: #000; width: 100%;" onclick="window.parent.postMessage('NEXT_LEVEL_3', '*')">SFIDA IL RE >></button>
+            <button style="background: #ffd700; color: #000; width: 100%; pointer-events: auto;" onclick="window.parent.postMessage('NEXT_LEVEL_3', '*')">SFIDA IL RE >></button>
         </div>
     </div>
 </div>
@@ -316,6 +316,7 @@ function draw() {
 </script>
 </body>
 </html>
+
 
 
 
